# electionmcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  ecosystem.config.js  env.example  pyproject.toml
src/mcp_server/: server.py
src/nec/: client.py
src/pdf/: processor.py
src/pipeline/: ingest.py  upload.py
