[project]
name = "korea-election-mcp"
version = "0.1.0"
description = "9회 전국동시지방선거 (2026.6.3) 후보자 정보 MCP 서버"
requires-python = ">=3.11"
dependencies = [
    # NEC OpenAPI
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",

    # PDF + OCR
    "pdfplumber>=0.11.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.17.0",
    "numpy>=1.26.0",

    # 데이터
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",

    # HuggingFace
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",

    # MCP 서버
    "mcp[cli]>=1.2.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",

    # 로깅·CLI
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
ingest = "pipeline.ingest:main"
upload = "pipeline.upload:main"
serve = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
